# hailstone

./: .gitignore  DESIGN.md  LICENSE  README.md  hailstone.cabal  stack.yaml
exe/: Main.hs  SDLTestMain.hs  ScratchMain.hs
exe/Sound/Hailstone/Backends/: Common.hs  PortAudio.hs  SDLAudio.hs
src/Data/: Stream.hs
src/Hailstone/: Synth.hs
src/Sound/Hailstone/: DelayQueue.hs  SDLAudio.hs  Sequencing.hs  Synth.hs  SynthOld.hs  SynthR.hs  Types.hs  VoiceAlloc.hs
src/Sound/Hailstone/Sequencing/: Cell.hs  CellScoreBuild.hs  CellScript.hs  Now.hs
src/Sound/Hailstone/Synth/: DelayQueue.hs  Effect.hs  Effects.hs  Generator.hs  Generators.hs  LR.hs  MiscTypes.hs  Node.hs  NodeDefnCtx.hs  SynthVal.hs
src/Sound/Hailstone/Types/: LR.hs
