name:                hailstone
version:             0.1.0.0
synopsis:            haskell audio synthesis + music composition
-- description:
homepage:            https://github.com/namanhd1nh/hailstone
license:             MIT
license-file:        LICENSE
author:              namanh
maintainer:          namanh@uchicago.edu
copyright:           2021 namanh
category:            Sound
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:    src
  ghc-options:       -Wall -O3 -threaded
  default-language:  Haskell2010
  exposed-modules:   Sound.Hailstone.Synth
                   , Sound.Hailstone.SDLAudio
                   , Data.Stream
  build-depends:     base >= 4.7 && < 5
                     , sdl2
                     , vector

executable hailstone-test
  hs-source-dirs:      exe
  main-is:             Main.hs
  ghc-options:         -Wall -O3 -threaded  
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hailstone
